Add new solution for new problems